--- a/src/QsCompiler/BondSchemas/BondSchemas.csproj
+++ b/src/QsCompiler/BondSchemas/BondSchemas.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\Common\AssemblyCommon.props" />
 
@@ -7,10 +7,6 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>Microsoft.Quantum.BondSchemas</AssemblyName>
   </PropertyGroup>
-
-  <ItemGroup>
-    <BondCodegen Remove="*.bond" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Bond.CSharp" Version="8.2.0" />
