--- a/examples/CompilerExtensions/CustomExtension/CustomExtension.csproj
+++ b/examples/CompilerExtensions/CustomExtension/CustomExtension.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Compiler" Version="0.15.2103133969" />
+    <PackageReference Include="Microsoft.Quantum.Compiler" Version="0.15.2104136839-beta" />
   </ItemGroup>
 
 </Project>
