--- a/src/QuantumSdk/Sdk/Sdk.props
+++ b/src/QuantumSdk/Sdk/Sdk.props
@@ -29,6 +29,7 @@
     <PackageReference Condition="'$(ResolvedProcessorArchitecture)' == 'HoneywellProcessor' And $(IncludeProviderPackages)" Include="Microsoft.Quantum.Providers.Honeywell" Version="0.16.2105140327-beta" />
     <PackageReference Condition="'$(ResolvedProcessorArchitecture)' == 'IonQProcessor' And $(IncludeProviderPackages)" Include="Microsoft.Quantum.Providers.IonQ" Version="0.16.2105140327-beta" />
     <PackageReference Condition="'$(ResolvedProcessorArchitecture)' == 'QCIProcessor' And $(IncludeProviderPackages)" Include="Microsoft.Quantum.Providers.QCI" Version="0.16.2105140327-beta" />
+    <PackageReference Condition="$(IncludeProviderPackages)" Include="Microsoft.Quantum.Providers.Core" Version="0.16.2105140327-beta" />
     <!-- TODO: uncomment once we are ready to use these packages.
     <PackageReference Condition="'$(ResolvedQuantumIntrinsics)' == 'Type1'" Include="Microsoft.Quantum.Type1.Core" Version="0.16.2105140327-beta" IsTargetPackage='true' />
     <PackageReference Condition="'$(ResolvedQuantumIntrinsics)' == 'Type2'" Include="Microsoft.Quantum.Type2.Core" Version="0.16.2105140327-beta" IsTargetPackage='true' />
