--- a/examples/CompilerExtensions/CustomExtension/CustomExtension.csproj
+++ b/examples/CompilerExtensions/CustomExtension/CustomExtension.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Compiler" Version="0.15.2102129448" />
+    <PackageReference Include="Microsoft.Quantum.Compiler" Version="0.17.210527376-pull" />
   </ItemGroup>
 
 </Project>
